...
                },
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = onCreateItem,
                modifier = Modifier.testTag("addEntryButton"),
            ) {
                Icon(Icons.Outlined.Add, contentDescription = "Add entry")
            }
        },
    ) { innerPadding ->
        VaultListContent(
...
